--- a/menu/planner/templates/recipe_info.html
+++ b/menu/planner/templates/recipe_info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Information</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/recipe_info.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/recipe.css' %}"> 
 </head>
 <body>
     <div id="wrapper">
