--- a/menu/planner/templates/all_recipes.html
+++ b/menu/planner/templates/all_recipes.html
@@ -5,21 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Recipes in Menu maker</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/all_recipes.css' %}"> 
 </head>
 <body>
     <div id="wrapper">
         <div class="nav_bar">
             <h3>Menu Maker</h3>
-            <!-- Button will take user back to the home page -->
-            <button onclick='location.href="/planner"'>Home</button>
-
+            <!-- logout route clears session and returns to login page (functioning) -->
+            <button onclick='location.href="/logout"'>Logout</button>
+        </div>
+        
+        <div class="recipe_nav">
+            <!-- favorite_recipes will take the user to the recipes they have favorited -->
+            <a href="/planner/all_recipes">All Recipes</a> |
             <!-- all_recipes will take you to all the recipes added by all users -->
             <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/favorite_recipes">Favorite Recipes</a>
+            <!-- Button will take user back to the home page -->
+        </div>
+        <button class="home" onclick='location.href="/planner"'>Home</button>
 
-            <!-- logout route clears session and returns to login page (functioning) -->
-            <button onclick='location.href="/logout"'>Logout</button>
+        <div class="images">
+            <img src="{% static 'media/lemon_chick.png' %}" alt="Creamy Lemon Skillet Chicken">
+            <img src="{% static 'media/dimsum.png' %}" alt="Green Onion Dimsum">
+            <img src="{% static 'media/tacos.png' %}" alt="Pork Tacos">
+            <img src="{% static 'media/pasta.png' %}" alt="Pasta Carbonara">
         </div>
 
         <div class = 'add_recipe'>
