--- a/menu/planner/templates/all_recipes.html
+++ b/menu/planner/templates/all_recipes.html
@@ -28,10 +28,10 @@
         <button class="home" onclick='location.href="/planner"'>Home</button>
 
         <div class="images">
-            <img src="{% static 'media/lemon_chick.png' %}" alt="Creamy Lemon Skillet Chicken">
-            <img src="{% static 'media/dimsum.png' %}" alt="Green Onion Dimsum">
-            <img src="{% static 'media/tacos.png' %}" alt="Pork Tacos">
-            <img src="{% static 'media/pasta.png' %}" alt="Pasta Carbonara">
+            <img src="{% static 'media/buffalo.png' %}" alt="Buffalo Chicken Sandwich">
+            <img src="{% static 'media/teriyaki.png' %}" alt="Teriyaki Noodles with Chicken">
+            <img src="{% static 'media/toastada.png' %}" alt="Toastadas">
+            <img src="{% static 'media/gnocchi.png' %}" alt="Creamy Gnocchi Soup">
         </div>
 
         <div class = 'add_recipe'>
