--- a/menu/planner/templates/edit_recipe.html
+++ b/menu/planner/templates/edit_recipe.html
@@ -5,24 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit a Recipe</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/edit_recipe.css' %}"> 
 </head>
 <body>
     <div id="wrapper">
         <div class="nav_bar">
             <h3>Menu Maker</h3>
-            <!-- Button will take user back to the home page -->
-            <button onclick='location.href="/planner"'>Home</button>
-
+            <!-- logout route clears session and returns to login page (functioning) -->
+            <button onclick='location.href="/logout"'>Logout</button>
+        </div>
+        
+        <div class="recipe_nav">
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/all_recipes">All Recipes</a> |
             <!-- all_recipes will take you to all the recipes added by all users -->
             <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/favorite_recipes">Favorite Recipes</a>
-
-            <!-- logout route clears session and returns to login page (functioning) -->
-            <button onclick='location.href="/logout"'>Logout</button>
+            <!-- Button will take user back to the home page -->
         </div>
+        <button class="home" onclick='location.href="/planner"'>Home</button>
 
         <!-- error messages will appear here (functioning)-->
         {% if messages %}
@@ -34,8 +37,7 @@
         {% endif %}
 
         <div class = 'add_recipe'>
-            <h2>Edit Your Recipe -</h2>
-            <p>{{recipe.title}}</p>
+            <h2>Edit Your Recipe: {{recipe.title}}</h2>
             <form action='/planner/update/{{recipe.id}}' method="POST">
                 {% csrf_token %}
                 <label for='new_title'>Title of Recipe:</label>
