--- a/menu/planner/static/css/all_recipes.css
+++ b/menu/planner/static/css/all_recipes.css
@@ -81,3 +81,11 @@ h4{
     font-size: 20px;
     color: rgb(44, 65, 83);
 }
+
+.like{
+    background-color: rgb(12, 49, 77);
+    width: 5px;
+    height: 20px;
+    text-align: center;
+    margin-left: 5px
+}
