--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -76,6 +76,7 @@
                 <h4>{{recipe.title}}</h4>
                 <p>{{recipe.description}}</p>
                 <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a> | <a href="/planner/edit_recipe/{{recipe.id}}">Edit Recipe</a> | <a href="/planner/delete_recipe/{{recipe.id}}">Delete Recipe</a>
+                <button class="like" onclick='location.href="/planner/add_favorite/{{recipe.id}}"'>Like</button>
         </div>
         {% endfor %}
 </div>
