--- a/menu/planner/static/css/all_recipes.css
+++ b/menu/planner/static/css/all_recipes.css
@@ -83,9 +83,5 @@ h4{
 }
 
 .like{
-    background-color: rgb(12, 49, 77);
-    width: 5px;
-    height: 20px;
-    text-align: center;
-    margin-left: 5px
+    color: rgb(136, 85, 85);
 }
