--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -28,13 +28,30 @@
         <button class="home" onclick='location.href="/planner"'>Home</button>
 
         <h2>{{user.first_name}}'s Grocery List</h2>
-        {% for food in produce %}
-        <p>{{food}}</p>
-        {% endfor %}
 
         <div class="create_food">
-            <form action="/planner/create_food/" method="POST">
+            <form action="/planner/create_food" method="POST">
+                {% csrf_token %}
+                
+                <label for='name'>Name:</label>
+                <input type='text' id='name' name='name'>
 
+                <label for="category">Category:</label>
+                <select id="category" name="category">
+                    <option> </option>
+                    <option>Produce</option>
+                    <option>Snacks</option>
+                    <option>Bakery</option>
+                    <option>International</option>
+                    <option>Meat</option>
+                    <option>Bread</option>
+                    <option>Baking & Spices</option>
+                    <option>Frozen</option>
+                    <option>Dairy</option>
+                    <option>Other</option>
+                </select>
+
+                <input type="submit" value="Add">
             </form>
         </div>
     </div>
