grocery list displaying properly and able to selct from proper categories

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -33,9 +33,10 @@
 
         <form action="/planner/view_menu/{{menu.id}}" method="POST">
             <h4>Week of:</h4>
-            <select>
+            
+            <select value={{menu.id}}>
                 {% for menu in user.menus.all %}
-                <option value={{menu.id}}>{{menu.week_date}}</option>
+                <option>{{menu.week_date}}</option>
                 {% endfor %}
             </select>
             <input type="submit" value="View">
