--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -27,10 +27,10 @@
         </div>
         <button class="home" onclick='location.href="/planner"'>Home</button>
 
-        <h2>{{user.first_name}}'s Grocery List</h2>
 
-        <div class="create_food">
-            <form action="/planner/create_food" method="POST">
+        <div class="add_food">
+            <h3>Add a Food</h3>
+            <form class="create_food" action="/planner/create_food" method="POST">
                 {% csrf_token %}
                 
                 <label for='name'>Name:</label>
@@ -53,6 +53,202 @@
 
                 <input type="submit" value="Add">
             </form>
+        </div>
+
+        <div class="list">
+            <h2>{{user.first_name}}'s Grocery List</h2>
+
+            <div class="produce">
+                <h4>Produce</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Produce" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in produce %}
+                <ul>
+                    <li><a href="/planner/remove_grocery/{{food.id}}">{{food}}</a></li>
+                </ul>
+                {% endfor %}
+            </div>
+
+            <div class="snacks">
+                <h4>Snacks</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Snacks" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in snacks %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="bakery">
+                <h4>Bakery</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Bakery" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in bakery %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="intl">
+                <h4>International</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "International" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in intl %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="meat">
+                <h4>Meat</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Meat" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in meat %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="bread">
+                <h4>Bread</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Bread" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in bread %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="bake_spice">
+                <h4>Baking & Spices</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Baking & Spices" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in bake_spice %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="frozen">
+                <h4>Frozen</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Frozen" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in frozen %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="dairy">
+                <h4>Dairy</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Dairy" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in dairy %}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
+
+            <div class="other">
+                <h4>Other</h4>
+                <form action="/planner/add_grocery/{{grocery.id}}">
+                    {% csrf_token %}
+                    <select id={{grocery.id}}>
+                        {% for grocery in all_foods %}
+                            {% if grocery.category == "Other" %}
+                                <option> </option>
+                                <option>{{grocery.name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Add">
+                </form>
+                {% for food in other%}
+                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </body>
