--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -74,7 +74,7 @@
                 </form>
                 {% for food in produce %}
                 <ul>
-                    <li><a href="/planner/remove_grocery/{{food.id}}">{{food}}</a></li>
+                    <li><a href="/planner/remove_grocery/{{food.id}}">{{food.name}}</a></li>
                 </ul>
                 {% endfor %}
             </div>
@@ -138,20 +138,22 @@
 
             <div class="meat">
                 <h4>Meat</h4>
-                <form action="/planner/add_grocery/{{grocery.id}}">
+                <form action="/planner/add_grocery" method="POST">
                     {% csrf_token %}
-                    <select id={{grocery.id}}>
+                    <select id="add_grocery" name="add_grocery">
+                        <option> </option>
                         {% for grocery in all_foods %}
                             {% if grocery.category == "Meat" %}
-                                <option> </option>
-                                <option>{{grocery.name}}</option>
+                                <option value={{grocery.id}}>{{grocery.name}}</option>
                             {% endif %}
                         {% endfor %}
                     </select>
                     <input type="submit" value="Add">
                 </form>
                 {% for food in meat %}
-                <a href="/planner/remove_grocery/{{food.id}}">{{food}}</a>
+                <ul>
+                    <li><a href="/planner/remove_grocery/{{food.id}}">{{food.name}}</a></li>
+                </ul>
                 {% endfor %}
             </div>
 
