--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -31,12 +31,12 @@
             <img src="{% static 'media/pasta.png' %}" alt="Pasta Carbonara">
         </div>
 
-        <form action="/planner/view_menu/{{menu.id}}" method="POST">
-            <h4>Week of:</h4>
-            
-            <select>
+        <form action="/planner/view_menu" method="POST">
+            {% csrf_token %}
+            <select id="view_menu" name="view_menu">
+                <option> </option>
                 {% for menu in user.menus.all %}
-                <option value={{menu.id}}>{{menu.week_date}}</option>
+                    <option value={{menu.id}}>{{menu.week_date}}</option>
                 {% endfor %}
             </select>
             <input type="submit" value="View">
@@ -72,8 +72,6 @@
             <button onclick='location.href="/planner/grocery_list"'>Grocery List</button>
             
         </div>
-
-
     </div>
 </body>
 </html>
