--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -44,7 +44,8 @@
 
         <div class="week">
         <!-- this will display the week a looks view with the menu the user has select-->
-            <table> 
+        <h4>Week of: {{current_menu.week_date}}</h4>    
+        <table> 
                 <thead>
                     <th>Monday</th>
                     <th>Tuesday</th>
