--- a/menu/planner/static/css/grocery_list.css
+++ b/menu/planner/static/css/grocery_list.css
@@ -43,3 +43,12 @@ h3{
 h4{
     text-decoration: underline;
 }
+
+table, th, td {
+    border: 1px solid;
+    padding: 10px;
+    text-align: center;
+    margin: 10px;
+    margin-left: 23%;
+    margin-right: 23%;
+}
