textareas created for directions and ingredients fields

--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -61,10 +61,10 @@
 
 
                 <label for='ingredients'>Ingredients:</label>
-                <input type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'>
+                <textarea type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'></textarea>
 
                 <label for='directions'>Directions:</label>
-                <input type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'>
+                <textarea type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'></textarea>
 
                 <input type='submit' value = "Add Recipe">
             </form>
