--- a/menu/planner/templates/edit_recipe.html
+++ b/menu/planner/templates/edit_recipe.html
@@ -44,7 +44,7 @@
                 <input type='text' id='new_title' name='new_title' placeholder={{recipe.title}}>
 
                 <label for='new_description'>Description of Recipe:</label>
-                <input type='text' id='new_description' name='new_description' placeholder={{recipe.description}}>
+                <input type='text' id='new_description' name='new_description' placeholder="{{recipe.description}}">
 
                 <label for='new_prep'>Prep Time:</label>
                 <input type='text' id='new_prep' name='new_prep' placeholder={{recipe.prep}}>
@@ -54,9 +54,9 @@
 
                 <!-- ***instruction and direction placeholders are arrays*** -->
                 <label for='new_ingredients'>Ingredients:</label>
-                <input type='text' id='new_ingredients' name='new_ingredients' placeholder={{recipe.ingredients}}>
+                <textarea id='new_ingredients' name='new_ingredients'>{% for character in recipe.ingredients %}{% if character != '[' and character != "'" and character != ']'%}{% if character == ',' %}{% else %}{{character}}{% endif %}{% endif %}{% endfor %}</textarea>
                 <label for='new_directions'>Directions:</label>
-                <input type='text' id='new_directions' name='new_directions' placeholder={{recipe.directions}}>
+                <textarea type='text' id='new_directions' name='new_directions'>{% for character in recipe.directions %}{% if character != '[' and character != "'" and character != ']'%}{% if character == ',' %}{% else %}{{character}}{% endif %}{% endif %}{% endfor %}</textarea>
 
                 <input type='submit' value = "Update">
             </form>
